e2fsck/pass2.c
@@ -1403,8 +1403,8 @@ int e2fsck_process_bad_inode(e2fsck_t ctx, ext2_ino_t dir,
 	else if (LINUX_S_ISSOCK(inode.i_mode)
 		 && !e2fsck_pass1_check_device_inode(fs, &inode))
 		problem = PR_2_BAD_SOCKET;
-	else if (LINUX_S_ISLNK(inode.i_mode)
-		 && !e2fsck_pass1_check_symlink(fs, ino, &inode, buf)) {
+	else if (LINUX_S_ISLNK(inode.i_mode) &&
+		 !e2fsck_pass1_check_symlink(ctx, ino, &inode, buf)) {
 		problem = PR_2_INVALID_SYMLINK;
 	}
 
